Name:          monad-safe
Version:       0.1
Description:   A composable way of running finalizers in the face of errors
Author:        Jonathan S
License:       MIT
License-File:  LICENSE
Build-Type:    Simple
Cabal-Version: >=1.8

library
    HS-Source-Dirs:  src
    Build-Depends:   base, transformers, mtl
    Exposed-modules: Control.Monad.Safe
    ghc-options:     -Wall
